--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Home</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="icon" type="images/x-icon" href="images/bpslogo.png">
+    <link rel="icon" type="images/x-icon" href="bpslogo.png">
 </head>
 
 <body>
@@ -19,6 +19,7 @@
 
             <ul>
 
+            
                 <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="bpslogo.png"></a>
 
                 <li><a href="index.html">Home</a></li>
@@ -302,7 +303,7 @@
             </a>
 
             <p id="cu">
-                <a id="contactLink"href="contact.html"> Contact Us </a>
+                <a id="contactLink" href="contact.html"> Contact Us </a>
                 <br> <span id="button" onclick="showSettings()">Settings</span>
             </p>
 
